Adds config to grafana that will allow dashboards to specific a folder
Enables foldersFromFilesStructure grafana config

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -23,6 +23,8 @@ configMapGenerator:
   - name: general-dashboards
     namespace: default
     options:
+      annotations:
+        grafana-dashboard-folder: General
       labels:
         grafana_dashboard: "1"
     files:
