--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -13,6 +13,8 @@ configMapGenerator:
   - name: network-dashboards
     namespace: network
     options:
+      annotations:
+        grafana-dashboard-folder: Network
       labels:
         grafana_dashboard: "1"
     files:
