Install loki explore plugin for grafana
Requires Loki version update and extra configs

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -57,6 +57,8 @@ spec:
         registry: docker.io
         repository: grafana/grafana
         tag: 11.2.1
+      plugins:
+        - https://storage.googleapis.com/integration-artifacts/grafana-lokiexplore-app/grafana-lokiexplore-app-latest.zip;grafana-lokiexplore-app
       sidecar:
         prune: true
         datasources:
