--- a/kubernetes/apps/monitoring/loki/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/helmrelease.yaml
@@ -13,7 +13,7 @@ spec:
         kind: HelmRepository
         name: grafana
         namespace: flux-system
-      version: 6.15.0
+      version: 6.16.0
   interval: 1h0m0s
   releaseName: loki
   targetNamespace: monitoring
@@ -27,10 +27,17 @@ spec:
       enabled: false
     loki:
       auth_enabled: false
+      image:
+        registry: docker.io
+        repository: grafana/loki
+        tag: 3.2.0
       storage:
         type: filesystem
       commonConfig:
         replication_factor: 1
+      limits_config:
+        allow_structured_metadata: true
+        volume_enabled: true
       schemaConfig:
         configs:
           - from: "2024-04-01"
@@ -43,6 +50,8 @@ spec:
       storage_config:
         filesystem:
           directory: /tmp/loki/chunks
+        pattern_ingester:
+          enabled: true
       ingester:
         chunk_encoding: snappy
       tracing:
