Update prowlarr creds

--- a/kubernetes/apps/default/prowlarr/secret.sops.yaml
+++ b/kubernetes/apps/default/prowlarr/secret.sops.yaml
@@ -5,10 +5,10 @@ metadata:
     namespace: default
 type: Opaque
 data:
-    API_KEY: ENC[AES256_GCM,data:RKcQyqsu2XDdn5y6KDO1hWvfqlNB/oBX4mKh8cgobMjuuh7s0AOGURx72hE=,iv:vMwwfRNEo+wH0oYmKts13EuwCuPgeELqbiLohTg9jMs=,tag:ow2Am8sXxuAAxSkdqtnn2g==,type:str]
-    APIKEY: ENC[AES256_GCM,data:5nYUrCpxSzvoNbwpyzbV1NXEbQLgUMYFiYXhCISPclZIOE2mAkKsUtiyaLg=,iv:DecW1QYQF3pPjRdnSHnk47DXAleCK7Jw38bvttKgK+4=,tag:VXUv0Ya9XitVqHkk07rL0Q==,type:str]
-    AUTH_PASSWORD: ENC[AES256_GCM,data:faYRiCMujeUkj0gV,iv:/9DjMvrhRbEGSUsY3Nk0opYRJQCdBfUjWN0jxr7m7lM=,tag:NstpeRxdxSMteA3LRf+pnw==,type:str]
-    AUTH_USERNAME: ENC[AES256_GCM,data:sVOXg8RIng31p3v6,iv:nVsadFOkyQnE7eBuwJRrcFA6Qx85o/5zswylwmVEQUo=,tag:tCT8jcwt0wmWXg8+LCF74g==,type:str]
+    API_KEY: ENC[AES256_GCM,data:QuHEYe9/c/oKIDKytnk5mNNK3dTDVq9XL18FFp8heGS0U8NW0kjRZozpGv0=,iv:VxhgTRh3LGxn7M9yQHy+x4sOMs57HuWAWdZMSb2IxW0=,tag:73uRlju0UCIIxkF85euP7g==,type:str]
+    APIKEY: ENC[AES256_GCM,data:NPPt7ZRcu/fmiuv8RUGauGivwwCT7d/mUD+bHF4PSZalta8BrIKdT4uVXXE=,iv:PLLmzFdczvrClQ5EkBMLK5wrtOqOMdyeXzvnBqrkyGE=,tag:4aOP2WJUMcf3tYOqwaD88w==,type:str]
+    AUTH_PASSWORD: ENC[AES256_GCM,data:SyvEbltDDVM=,iv:YJi5mwFoULMY1ESuX5OKJXGKhsMfv5xdTeHEQGowCy0=,tag:qoGKCuPou2S3CEN2FT6pPQ==,type:str]
+    AUTH_USERNAME: ENC[AES256_GCM,data:6Nk7ws603wRXuE/3,iv:XCc/Pui48R/5+hkUGjwcNblOdNLLRqDYSd8eFpBzI8I=,tag:CbsBJ455LxY3kW+rOWswZQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,8 +24,8 @@ sops:
             VUxETUthYmh4b2QycnU5T0hKVmJlQ28Ks7nUV0RyfKJozVZS5TuyD5+KCU59dAFv
             Uu2zOoWf9ih0Mi85pNeFeZSIfppeZADBXbJJ7XtxGAIp5jzY4m5Ipg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-03T15:23:40Z"
-    mac: ENC[AES256_GCM,data:bk9Mtn/lOsmJyKW8WNPk03eyrdwmV3pWVYVGEIbjHn5IoFGNy8h1aYk3dwPzW+1PzEoGuJlWyVNOZFXbmu82bSr/wbdL050cf3w1v1qxM9lRdIetJM11bf2Zg1qxTtrGLSpV8qUyKhb5u3/1mO9LVO2HP1C64aV8RX/ZDDiwp9s=,iv:IhCk/VEgR/+RA2sHKP7hBLpQ07B/YWC1/EWtI/TvPR0=,tag:Jt7GxSRGH34mhnAL/PVBLg==,type:str]
+    lastmodified: "2024-10-03T21:06:27Z"
+    mac: ENC[AES256_GCM,data:SNXNDHiqIgE8DgGEFAkyQHwBOhObVr1/60KyqBZiT/E+UL0L2golo9/9N/lfhJ3NM9jtPqgJz/XGvhpYG2Sm4/GfIDSpQ7csBek+wSxHdUAmakB5Ah9tMkLtOkawWvU4cVpjJ5BPq5x1ZPOCB2vTgKYn8hF2V0xX1PaRtMDiD20=,iv:HsQWSTjXmTsM7PcYbKigNaFzK1hk6j5jRpgvNuFhZDc=,tag:kEPFX7CK/1e1eAPH3T1UBw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
