--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,27 @@ wiki
 /app-template/README.md
 /app-template/values.schema.json
 /app-template/values.yaml
+kubeshark/Chart.yaml
+kubeshark/LICENSE
+kubeshark/metrics.md
+kubeshark/PF_RING.md
+kubeshark/README.md
+kubeshark/values.yaml
+kubeshark/templates/_helpers.tpl
+kubeshark/templates/01-service-account.yaml
+kubeshark/templates/02-cluster-role.yaml
+kubeshark/templates/03-cluster-role-binding.yaml
+kubeshark/templates/04-hub-deployment.yaml
+kubeshark/templates/05-hub-service.yaml
+kubeshark/templates/06-front-deployment.yaml
+kubeshark/templates/07-front-service.yaml
+kubeshark/templates/08-persistent-volume-claim.yaml
+kubeshark/templates/09-worker-daemon-set.yaml
+kubeshark/templates/10-ingress.yaml
+kubeshark/templates/11-nginx-config-map.yaml
+kubeshark/templates/12-config-map.yaml
+kubeshark/templates/13-secret.yaml
+kubeshark/templates/14-openshift-security-context-constraints.yaml
+kubeshark/templates/15-worker-service-metrics.yaml
+kubeshark/templates/16-network-policies.yaml
+kubeshark/templates/NOTES.txt
