--- a/kubernetes/apps/monitoring/kubeshark/kubeshark.yaml
+++ b/kubernetes/apps/monitoring/kubeshark/kubeshark.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: kubeshark
-      version: 42.0.0
+      version: 52.3.82
       sourceRef:
         kind: HelmRepository
         name: kubeshark
@@ -23,20 +23,21 @@ spec:
     remediation:
       retries: 3
   values:
+    tap:
+      persistentStorage: true
+      storageClass: nfs-client-ssd
+      storageLimit: 5Gi
     ingress:
-      main:
-        enabled: true
-        ingressClassName: nginx
-        annotations:
-          hajimari.io/icon: mdi:shark-fin
-        hosts:
-          - host: &host "kubeshark.internal.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
-        tls:
-          - hosts:
-              - *host
+      enabled: true
+      className: nginx
+      annotations:
+        hajimari.io/icon: mdi:shark-fin
+        nginx.ingress.kubernetes.io/service-upstream: "true"
+      host: &host "kubeshark.internal.${SECRET_DOMAIN}"
+      tls:
+        - hosts:
+            - *host
+          secretName: kubeshark-tls
     resources:
       requests:
         cpu: 10m
