--- a/kubernetes/apps/monitoring/kubeshark/kubeshark.yaml
+++ b/kubernetes/apps/monitoring/kubeshark/kubeshark.yaml
@@ -23,6 +23,7 @@ spec:
     remediation:
       retries: 3
   values:
+    fullnameOverride: "kubeshark"
     tap:
       persistentStorage: true
       storageClass: nfs-client-ssd
