--- a/kubernetes/apps/flux-system/kustomization.yaml
+++ b/kubernetes/apps/flux-system/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ./webhooks/ks.yaml
   - ./pod-monitor.yaml
   - ./capacitor
+  - ./weave
 configMapGenerator:
   - name: flux-grafana-dashboards
     namespace: monitoring
