--- a/kubernetes/apps/flux-system/weave/weave-dashboard.yaml
+++ b/kubernetes/apps/flux-system/weave/weave-dashboard.yaml
@@ -38,7 +38,7 @@ spec:
   values:
     adminUser:
       create: true
-      username: admin
+      createSecret: false
 
     ingress:
       enabled: true
