--- a/kubernetes/apps/flux-system/weave/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave/secret.sops.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: weave-gitops-admin-secret
+    name: cluster-user-auth
+    namespace: flux-system
 type: Opaque
 stringData:
     username: ENC[AES256_GCM,data:Ibbbdxc=,iv:zu5iwzcr8k6RueJWuvkOs+D/5JpkjohuozQiWrYbmSM=,tag:TyqtsIXycnQLAwoXUClxmg==,type:str]
@@ -21,8 +22,8 @@ sops:
             alRJQ1JUbW9ESUpNMTlQWVk3SjBjOEUKH57+7+omaKyNUm6B3co8LLKZ8b8smEDo
             1WGu6P1bi+0ZjPAD3yTvsAegXMYfpZ8DB4N98XzCzuT0jzgwTzy6rg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-04T03:36:00Z"
-    mac: ENC[AES256_GCM,data:v/x8ZTbJnQc7QoLd64cnUYgsMDyJP15V2GMdbMrulPP6j91+q3b/DrUKgy0xurV/AdsRg45PryEnSumMi0l5DYz3RPWVXTmN3gBb4EoJhdI0XWoZ/WwUjDT+52n1kicH1iI3aiIqRdq4pBbnBrtkvvPLKt36f9WfbfHStxfA9CM=,iv:eT5FxB1soYAL3jk5cz5ReshYQeebC4ogQfqQDEG5IBg=,tag:D6gfqugdLUTHDDk9hmED5Q==,type:str]
+    lastmodified: "2024-10-04T03:39:26Z"
+    mac: ENC[AES256_GCM,data:TtUchN+vgDODBXWx+iPLPsREr+XSpL5OGg+sHON4RhLe45w9T3jI1pW0jjSVmxRzXyHjqfoKUSe+1FCoF3Ud1EiSOewG5NHSmM7iYscdayNPuDCDpB35swjo/H5d/5mrEX2d7G/Bxo41XvVEt2NU5BOYH70xQFP2eoFCaP2+JvI=,iv:XuvA2w6O1PvPnHEh/uI4V8kjxDe9Z+V0PDsOnq+3h8w=,tag:0Im1prozmS/mQjtuI6jCjg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
