--- a/kubernetes/apps/flux-system/weave/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave/secret.sops.yaml
@@ -6,7 +6,7 @@ metadata:
 type: Opaque
 stringData:
     username: ENC[AES256_GCM,data:Ibbbdxc=,iv:zu5iwzcr8k6RueJWuvkOs+D/5JpkjohuozQiWrYbmSM=,tag:TyqtsIXycnQLAwoXUClxmg==,type:str]
-    password: ENC[AES256_GCM,data:rou/9rI=,iv:EY9M34d25qK/8qwIyckQeoua7PYok19/H8nkuZHOoy0=,tag:IXNbQxeW4lkB9y8emCeX6g==,type:str]
+    password: ENC[AES256_GCM,data:pdwUHP6GrI3NOmT6kkNoeUsNrYUCTUa7qGJRLmgMhIQHzEHgOAFj4fBird1Xp78F/j1czre3auhB1Gcn,iv:2zmmGDMaXNN1TdBlLEEwoItrCIIi6pVR0/O1UNIiwjY=,tag:rCvmNuowYHiIDBYoyOzKQw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             alRJQ1JUbW9ESUpNMTlQWVk3SjBjOEUKH57+7+omaKyNUm6B3co8LLKZ8b8smEDo
             1WGu6P1bi+0ZjPAD3yTvsAegXMYfpZ8DB4N98XzCzuT0jzgwTzy6rg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-04T03:39:26Z"
-    mac: ENC[AES256_GCM,data:TtUchN+vgDODBXWx+iPLPsREr+XSpL5OGg+sHON4RhLe45w9T3jI1pW0jjSVmxRzXyHjqfoKUSe+1FCoF3Ud1EiSOewG5NHSmM7iYscdayNPuDCDpB35swjo/H5d/5mrEX2d7G/Bxo41XvVEt2NU5BOYH70xQFP2eoFCaP2+JvI=,iv:XuvA2w6O1PvPnHEh/uI4V8kjxDe9Z+V0PDsOnq+3h8w=,tag:0Im1prozmS/mQjtuI6jCjg==,type:str]
+    lastmodified: "2024-10-04T03:50:40Z"
+    mac: ENC[AES256_GCM,data:Lhu6hP9x/Ws++vI8Dp3tbK3eBqcv4N0TJXmpnkE1Wl3LBpnXArq8frxVVNlKHL5JdjNHf2NzvKhiOHrvwk3Mo+Rh/QOGqXgbyMiPMUpC2RDId16i0BUowiHrVjOgFgKuU21qghK4lT6nNReZiMe81Ayim/T9frvnp5kQqn65rP8=,iv:qNrZeJXfpHwbXSypLJn6xHYHy7XMGVa7inKcv2I2kZY=,tag:sIMhuC6ddUYik/FiWFHUqQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
