--- a/kubernetes/apps/flux-system/weave/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: flux-system
 type: Opaque
 stringData:
-    username: ENC[AES256_GCM,data:Ibbbdxc=,iv:zu5iwzcr8k6RueJWuvkOs+D/5JpkjohuozQiWrYbmSM=,tag:TyqtsIXycnQLAwoXUClxmg==,type:str]
+    username: ENC[AES256_GCM,data:Rso43zqXh6se5A==,iv:Q2mAiRNwjqWi6isWrLIBthQoqpsUEJ4qMvV4D4Rz1ew=,tag:yTbmfN94fqDpHDfhGBc/dA==,type:str]
     password: ENC[AES256_GCM,data:pdwUHP6GrI3NOmT6kkNoeUsNrYUCTUa7qGJRLmgMhIQHzEHgOAFj4fBird1Xp78F/j1czre3auhB1Gcn,iv:2zmmGDMaXNN1TdBlLEEwoItrCIIi6pVR0/O1UNIiwjY=,tag:rCvmNuowYHiIDBYoyOzKQw==,type:str]
 sops:
     kms: []
@@ -22,8 +22,8 @@ sops:
             alRJQ1JUbW9ESUpNMTlQWVk3SjBjOEUKH57+7+omaKyNUm6B3co8LLKZ8b8smEDo
             1WGu6P1bi+0ZjPAD3yTvsAegXMYfpZ8DB4N98XzCzuT0jzgwTzy6rg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-04T03:50:40Z"
-    mac: ENC[AES256_GCM,data:Lhu6hP9x/Ws++vI8Dp3tbK3eBqcv4N0TJXmpnkE1Wl3LBpnXArq8frxVVNlKHL5JdjNHf2NzvKhiOHrvwk3Mo+Rh/QOGqXgbyMiPMUpC2RDId16i0BUowiHrVjOgFgKuU21qghK4lT6nNReZiMe81Ayim/T9frvnp5kQqn65rP8=,iv:qNrZeJXfpHwbXSypLJn6xHYHy7XMGVa7inKcv2I2kZY=,tag:sIMhuC6ddUYik/FiWFHUqQ==,type:str]
+    lastmodified: "2024-10-04T04:29:32Z"
+    mac: ENC[AES256_GCM,data:h9zXY4Iv1/UzIkVGdy/dj4eLSl8NWyjU2OwGiBl/VPxZ/iiafTdkAZk3h6M2osK0Qc6o2q9uSkv7lcvHmZO6Iyu6N11iowR8FzSW0emk2lk6Hmty1SnZZPbD/EDOG1PKcetcXqkgw+e/XbXp3YMTWPhTAMCa3lm1hh5oggnLmMU=,iv:trIKX4Yv694nnfjrG8IpTra89nPL79FmTq0bnXFUIBg=,tag:9hKjG1oxRuYlElsVHcYeDQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
