--- a/kubernetes/apps/default/radarr/secret.sops.yaml
+++ b/kubernetes/apps/default/radarr/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: default
 type: Opaque
 data:
-    API_KEY: ENC[AES256_GCM,data:RXL/yiJi/UC6OlZ0iizAX8+6ik1IYMiiK3Fi60oqDZe9+5bjDePX/7C729w=,iv:sEeYAa+N+0suutYWWdxFAjRNmAtC1nBTdvryvqeuKd8=,tag:2KBWS0/GOxligNIFXdQXDQ==,type:str]
-    AUTH_PASSWORD: ENC[AES256_GCM,data:TwcB+P99/Lt4V2EX,iv:C4JnjF+0LSciGOMmuyAUvr6uDWLxAB6GKBhMoSOx0+M=,tag:Mq3NEOTGIgDVrspfPwSojQ==,type:str]
-    AUTH_USERNAME: ENC[AES256_GCM,data:fvuwNWJz2ykyNhVY,iv:Pubn8agcv/OuTA4oEhEVtvmeanCaf03qoukWgOe8+mg=,tag:9Lwbz5cGkscLi/G+LsLaDw==,type:str]
+    API_KEY: ENC[AES256_GCM,data:rJS+5QL2ezvqrnUApiarhrnal6iOAtbBhQURw+qlZ+X7v3Zn5ES/YCg2qr0=,iv:3UoVeJMmJ7jR8ukA6e1TxM0Vigaq3PWtIo0/mPst/00=,tag:NHqdbEf2ZtlKtQX83fsUGA==,type:str]
+    AUTH_PASSWORD: ENC[AES256_GCM,data:c8GRX5diIH4=,iv:7+Q9QFqwIlT7D5GYW1MCTQ61YsRBfPmrVt0XSs9Db6o=,tag:qwmkFlRnPQJi/WwaQlJT9g==,type:str]
+    AUTH_USERNAME: ENC[AES256_GCM,data:KEiPrlvh1vrDRSjM,iv:kDGRYixnNp92TjVvIiLZOh69KvcNVyuGTyIb+eY3a/4=,tag:kViltqNWm3Kk0Xy34w89Bw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +23,8 @@ sops:
             ODFiZ0ZNNldoaFRNQ1pvMkZrczBmbncKwXszjlYxaOQ2VC17LJpEFQOoquoswkM/
             2fkREaeaVQUm4XA/tLzGvzbVlCh1nGa0/GaAvb3zU5qkD730PlbuNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-03T14:48:47Z"
-    mac: ENC[AES256_GCM,data:Y9GBZ2br4Z+YEZZ02XT1FZN9BaW18wmR4IXspsS83kF8WQ7jUV7fwYI4p/aU/85LNgFb2Nfm3Uyhj0NtRjjh5SMGguuds1tT+DKtjc71mZKw56CHoyjJNL9In8gdeME9DcsKUGNQGtKbCzOSCjnDsTz5oMiXMBWEtL45WbEaOZ8=,iv:Tmt4lqHZYTb3uIjNbfJQCmOTrykIVLVWafbosXdQP6o=,tag:t2EHuXruyRKA6DWcMmFMfg==,type:str]
+    lastmodified: "2024-10-04T04:51:26Z"
+    mac: ENC[AES256_GCM,data:2+I+TeFBGDUBFW5bEKCm20mjN9hCtKGEErk7gwGj9nDjERzNn/qe6F2hMuMoG3IXkGTMksdZYlHsq0v/c/YsC6xHBkOzbE4fxecAcc4Y6c3JjuDnrWQDGXewAlytz+Y3NIEEy6u+RrovU+JTwjz5RydSYKlBZu5qqyuSangiRX0=,iv:dWqbS3BTbPtyrwgJDSVe4SYDqkyW1woowSkAwLeORT0=,tag:Lyu9CrNvOiTBVDeFMtkEUA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
