--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -33,7 +33,7 @@ spec:
               - name: CONFIG
                 value: /config/config.xml
               - name: FORM_AUTH
-                value: true
+                value: false
               - name: ENABLE_ADDITIONAL_METRICS
                 value: true
               - name: DISABLE_SSL_VERIFY
