--- a/kubernetes/apps/default/bazarr/bazarr.yaml
+++ b/kubernetes/apps/default/bazarr/bazarr.yaml
@@ -57,7 +57,7 @@ spec:
                     key: API_KEY
               URL: http://bazarr:6767
               PORT: 6768
-              FORM_AUTH: true
+              FORM_AUTH: false
             envFrom:
               - secret: bazarr-apikey
     global:
