Export extra metrics for bazarr

--- a/kubernetes/apps/default/bazarr/bazarr.yaml
+++ b/kubernetes/apps/default/bazarr/bazarr.yaml
@@ -38,6 +38,8 @@ spec:
                 value: 1000
               - name: PGID
                 value: 1000
+              - name: ENABLE_ADDITIONAL_METRICS
+                value: "true"
             image:
               repository: linuxserver/bazarr
               tag: 1.4.5
