--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,159 @@ kubeshark/templates/14-openshift-security-context-constraints.yaml
 kubeshark/templates/15-worker-service-metrics.yaml
 kubeshark/templates/16-network-policies.yaml
 kubeshark/templates/NOTES.txt
+cilium/.helmignore
+cilium/Chart.yaml
+cilium/LICENSE
+cilium/README.md
+cilium/README.md.gotmpl
+cilium/values.schema.json
+cilium/values.yaml
+cilium/values.yaml.tmpl
+cilium/files/agent/poststart-eni.bash
+cilium/files/cilium-agent/dashboards/cilium-dashboard.json
+cilium/files/cilium-envoy/configmap/bootstrap-config.json
+cilium/files/cilium-operator/dashboards/cilium-operator-dashboard.json
+cilium/files/hubble/dashboards/hubble-dashboard.json
+cilium/files/hubble/dashboards/hubble-dns-namespace.json
+cilium/files/hubble/dashboards/hubble-l7-http-metrics-by-workload.json
+cilium/files/hubble/dashboards/hubble-network-overview-namespace.json
+cilium/files/nodeinit/prestop.bash
+cilium/files/nodeinit/startup.bash
+cilium/files/spire/init.bash
+cilium/files/spire/wait-for-spire.bash
+cilium/templates/_extensions.tpl
+cilium/templates/_helpers.tpl
+cilium/templates/cilium-ca-bundle-configmap.yaml
+cilium/templates/cilium-ca-secret.yaml
+cilium/templates/cilium-configmap.yaml
+cilium/templates/cilium-flowlog-configmap.yaml
+cilium/templates/cilium-gateway-api-class.yaml
+cilium/templates/cilium-ingress-class.yaml
+cilium/templates/cilium-ingress-service.yaml
+cilium/templates/cilium-resource-quota.yaml
+cilium/templates/cilium-secrets-namespace.yaml
+cilium/templates/NOTES.txt
+cilium/templates/validate.yaml
+cilium/templates/cilium-agent/clusterrole.yaml
+cilium/templates/cilium-agent/clusterrolebinding.yaml
+cilium/templates/cilium-agent/daemonset.yaml
+cilium/templates/cilium-agent/dashboards-configmap.yaml
+cilium/templates/cilium-agent/role.yaml
+cilium/templates/cilium-agent/rolebinding.yaml
+cilium/templates/cilium-agent/service.yaml
+cilium/templates/cilium-agent/serviceaccount.yaml
+cilium/templates/cilium-agent/servicemonitor.yaml
+cilium/templates/cilium-envoy/configmap.yaml
+cilium/templates/cilium-envoy/daemonset.yaml
+cilium/templates/cilium-envoy/service.yaml
+cilium/templates/cilium-envoy/serviceaccount.yaml
+cilium/templates/cilium-envoy/servicemonitor.yaml
+cilium/templates/cilium-nodeinit/daemonset.yaml
+cilium/templates/cilium-nodeinit/serviceaccount.yaml
+cilium/templates/cilium-operator/_helpers.tpl
+cilium/templates/cilium-operator/clusterrole.yaml
+cilium/templates/cilium-operator/clusterrolebinding.yaml
+cilium/templates/cilium-operator/dashboards-configmap.yaml
+cilium/templates/cilium-operator/deployment.yaml
+cilium/templates/cilium-operator/poddisruptionbudget.yaml
+cilium/templates/cilium-operator/role.yaml
+cilium/templates/cilium-operator/rolebinding.yaml
+cilium/templates/cilium-operator/secret.yaml
+cilium/templates/cilium-operator/service.yaml
+cilium/templates/cilium-operator/serviceaccount.yaml
+cilium/templates/cilium-operator/servicemonitor.yaml
+cilium/templates/cilium-preflight/clusterrole.yaml
+cilium/templates/cilium-preflight/clusterrolebinding.yaml
+cilium/templates/cilium-preflight/daemonset.yaml
+cilium/templates/cilium-preflight/deployment.yaml
+cilium/templates/cilium-preflight/poddisruptionbudget.yaml
+cilium/templates/cilium-preflight/serviceaccount.yaml
+cilium/templates/clustermesh-apiserver/_helpers.tpl
+cilium/templates/clustermesh-apiserver/clusterrole.yaml
+cilium/templates/clustermesh-apiserver/clusterrolebinding.yaml
+cilium/templates/clustermesh-apiserver/deployment.yaml
+cilium/templates/clustermesh-apiserver/metrics-service.yaml
+cilium/templates/clustermesh-apiserver/poddisruptionbudget.yaml
+cilium/templates/clustermesh-apiserver/service.yaml
+cilium/templates/clustermesh-apiserver/serviceaccount.yaml
+cilium/templates/clustermesh-apiserver/servicemonitor.yaml
+cilium/templates/clustermesh-apiserver/users-configmap.yaml
+cilium/templates/clustermesh-apiserver/tls-certmanager/admin-secret.yaml
+cilium/templates/clustermesh-apiserver/tls-certmanager/client-secret.yaml
+cilium/templates/clustermesh-apiserver/tls-certmanager/local-secret.yaml
+cilium/templates/clustermesh-apiserver/tls-certmanager/remote-secret.yaml
+cilium/templates/clustermesh-apiserver/tls-certmanager/server-secret.yaml
+cilium/templates/clustermesh-apiserver/tls-cronjob/_job-spec.tpl
+cilium/templates/clustermesh-apiserver/tls-cronjob/cronjob.yaml
+cilium/templates/clustermesh-apiserver/tls-cronjob/job.yaml
+cilium/templates/clustermesh-apiserver/tls-cronjob/role.yaml
+cilium/templates/clustermesh-apiserver/tls-cronjob/rolebinding.yaml
+cilium/templates/clustermesh-apiserver/tls-cronjob/serviceaccount.yaml
+cilium/templates/clustermesh-apiserver/tls-helm/admin-secret.yaml
+cilium/templates/clustermesh-apiserver/tls-helm/client-secret.yaml
+cilium/templates/clustermesh-apiserver/tls-helm/local-secret.yaml
+cilium/templates/clustermesh-apiserver/tls-helm/remote-secret.yaml
+cilium/templates/clustermesh-apiserver/tls-helm/server-secret.yaml
+cilium/templates/clustermesh-apiserver/tls-provided/admin-secret.yaml
+cilium/templates/clustermesh-apiserver/tls-provided/client-secret.yaml
+cilium/templates/clustermesh-apiserver/tls-provided/remote-secret.yaml
+cilium/templates/clustermesh-apiserver/tls-provided/server-secret.yaml
+cilium/templates/clustermesh-config/_helpers.tpl
+cilium/templates/clustermesh-config/clustermesh-secret.yaml
+cilium/templates/clustermesh-config/kvstoremesh-secret.yaml
+cilium/templates/hubble/dashboards-configmap.yaml
+cilium/templates/hubble/metrics-service.yaml
+cilium/templates/hubble/peer-service.yaml
+cilium/templates/hubble/servicemonitor.yaml
+cilium/templates/hubble/tls-certmanager/metrics-server-secret.yaml
+cilium/templates/hubble/tls-certmanager/relay-client-secret.yaml
+cilium/templates/hubble/tls-certmanager/relay-server-secret.yaml
+cilium/templates/hubble/tls-certmanager/server-secret.yaml
+cilium/templates/hubble/tls-certmanager/ui-client-certs.yaml
+cilium/templates/hubble/tls-cronjob/_job-spec.tpl
+cilium/templates/hubble/tls-cronjob/cronjob.yaml
+cilium/templates/hubble/tls-cronjob/job.yaml
+cilium/templates/hubble/tls-cronjob/role.yaml
+cilium/templates/hubble/tls-cronjob/rolebinding.yaml
+cilium/templates/hubble/tls-cronjob/serviceaccount.yaml
+cilium/templates/hubble/tls-helm/metrics-server-secret.yaml
+cilium/templates/hubble/tls-helm/relay-client-secret.yaml
+cilium/templates/hubble/tls-helm/relay-server-secret.yaml
+cilium/templates/hubble/tls-helm/server-secret.yaml
+cilium/templates/hubble/tls-helm/ui-client-certs.yaml
+cilium/templates/hubble/tls-provided/metrics-server-secret.yaml
+cilium/templates/hubble/tls-provided/relay-client-secret.yaml
+cilium/templates/hubble/tls-provided/relay-server-secret.yaml
+cilium/templates/hubble/tls-provided/server-secret.yaml
+cilium/templates/hubble/tls-provided/ui-client-certs.yaml
+cilium/templates/hubble-relay/configmap.yaml
+cilium/templates/hubble-relay/deployment.yaml
+cilium/templates/hubble-relay/metrics-service.yaml
+cilium/templates/hubble-relay/poddisruptionbudget.yaml
+cilium/templates/hubble-relay/service.yaml
+cilium/templates/hubble-relay/serviceaccount.yaml
+cilium/templates/hubble-relay/servicemonitor.yaml
+cilium/templates/hubble-ui/_nginx.tpl
+cilium/templates/hubble-ui/clusterrole.yaml
+cilium/templates/hubble-ui/clusterrolebinding.yaml
+cilium/templates/hubble-ui/configmap.yaml
+cilium/templates/hubble-ui/deployment.yaml
+cilium/templates/hubble-ui/ingress.yaml
+cilium/templates/hubble-ui/poddisruptionbudget.yaml
+cilium/templates/hubble-ui/service.yaml
+cilium/templates/hubble-ui/serviceaccount.yaml
+cilium/templates/spire/bundle-configmap.yaml
+cilium/templates/spire/namespace.yaml
+cilium/templates/spire/agent/clusterrole.yaml
+cilium/templates/spire/agent/clusterrolebinding.yaml
+cilium/templates/spire/agent/configmap.yaml
+cilium/templates/spire/agent/daemonset.yaml
+cilium/templates/spire/agent/serviceaccount.yaml
+cilium/templates/spire/server/clusterrole.yaml
+cilium/templates/spire/server/clusterrolebinding.yaml
+cilium/templates/spire/server/configmap.yaml
+cilium/templates/spire/server/role.yaml
+cilium/templates/spire/server/rolebinding.yaml
+cilium/templates/spire/server/service.yaml
+cilium/templates/spire/server/serviceaccount.yaml
+cilium/templates/spire/server/statefulset.yaml
