--- a/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
@@ -26,7 +26,7 @@ envoy:
   prometheus:
     enabled: true
     serviceMonitor:
-      enabled: false
+      enabled: true
 ingressController:
   enabled: true
   default: false
