Enable cilium network policy

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -18,6 +18,7 @@ resources:
   - ./proxmox
   - ./influx
   - ./bazarr
+  - ./l7-visibility-policy.yaml
 
 configMapGenerator:
   - name: general-dashboards
