Enable cilium network policy

--- a/kubernetes/apps/default/l7-visibility-policy.yaml
+++ b/kubernetes/apps/default/l7-visibility-policy.yaml
@@ -21,5 +21,7 @@ spec:
               protocol: TCP
             - port: "443"
               protocol: TCP
+            - port: "5432"
+              protocol: TCP
           rules:
             http: [{}]
