--- a/kubernetes/apps/default/l7-visibility-policy.yaml
+++ b/kubernetes/apps/default/l7-visibility-policy.yaml
@@ -12,6 +12,8 @@ spec:
               protocol: TCP
             - port: "443"
               protocol: TCP
+            - port: "5432"
+              protocol: TCP
           rules:
             http: [{}]
   egress:
