--- a/kubernetes/apps/default/namespace.yaml
+++ b/kubernetes/apps/default/namespace.yaml
@@ -3,6 +3,6 @@ kind: Namespace
 metadata:
   name: default
   labels:
-#    istio.io/dataplane-mode: ambient
-#    istio.io/use-waypoint: waypoint
-    istio-injection: enabled
+    #    istio.io/dataplane-mode: ambient
+    #    istio.io/use-waypoint: waypoint
+    istio-injection: disabled
