Enable cilium network policy

--- a/kubernetes/apps/default/l7-visibility-policy.yaml
+++ b/kubernetes/apps/default/l7-visibility-policy.yaml
@@ -26,6 +26,8 @@ spec:
               protocol: TCP
             - port: "27017"
               protocol: TCP
+            - port: "5055"
+              protocol: TCP
           rules:
             http: [{}]
   egress:
