--- a/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
@@ -32,6 +32,7 @@ ingressController:
   default: false
   defaultSecretNamespace: network
   defaultSecretName: stiforr-com-production-tls
+  loadbalancerMode: shared
 clustermesh:
   useAPIServer: false
 ipam:
