--- a/kubernetes/apps/default/namespace.yaml
+++ b/kubernetes/apps/default/namespace.yaml
@@ -5,4 +5,4 @@ metadata:
   labels:
     #    istio.io/dataplane-mode: ambient
     #    istio.io/use-waypoint: waypoint
-    istio-injection: disabled
+    istio-injection: enabled
