--- a/kubernetes/apps/default/portainer/namespace.yaml
+++ b/kubernetes/apps/default/portainer/namespace.yaml
@@ -3,6 +3,6 @@ kind: Namespace
 metadata:
   name: portainer
   labels:
-    istio-injection: enabled
+    istio-injection: disabled
     pod-security.kubernetes.io/enforce: privileged
     pod-security.kubernetes.io/enforce-version: latest
