--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -25,7 +25,7 @@ spec:
       name: cilium-helm-values
   values:
     envoyConfig:
-      enabled: false
+      enabled: true
     hubble:
       enabled: true
       metrics:
@@ -36,7 +36,7 @@ spec:
           - flow
           - port-distribution
           - icmp
-          - httpv2
+          - httpV2
         serviceMonitor:
           enabled: true
         dashboards:
