--- a/kubernetes/apps/default/all-ports-policy.yaml
+++ b/kubernetes/apps/default/all-ports-policy.yaml
@@ -9,6 +9,8 @@ spec:
     ingress: false
   endpointSelector: {}
   ingress:
-    - {}
+    - fromEndpoints:
+        - {}
   egress:
-    - {}
+    - toEndpoints:
+        - {}
