All network policy

--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -25,6 +25,7 @@ spec:
       name: cilium-helm-values
   values:
     policyAuditMode: true
+    policyEnforcementMode: "default"
     envoyConfig:
       enabled: true
     hubble:
