--- a/kubernetes/apps/default/all-ports-policy.yaml
+++ b/kubernetes/apps/default/all-ports-policy.yaml
@@ -29,3 +29,25 @@ spec:
               protocol: TCP
           rules:
             http: [{}]
+
+  ingress:
+    - fromEntities:
+      - all
+      toPorts:
+        - ports:
+            - port: "80"
+              protocol: ANY
+            - port: "443"
+              protocol: ANY
+            - port: "5432"
+              protocol: ANY
+            - port: "6379"
+              protocol: ANY
+            - port: "7878"
+              protocol: ANY
+            - port: "8000"
+              protocol: ANY
+            - port: "8989"
+              protocol: ANY
+        - rules:
+            http: [{}]
