All network policy

--- a/kubernetes/apps/default/all-ports-policy.yaml
+++ b/kubernetes/apps/default/all-ports-policy.yaml
@@ -7,9 +7,7 @@ spec:
   enableDefaultDeny:
     egress: false
     ingress: false
-  endpointSelector:
-    matchLabels:
-      "k8s:io.kubernetes.pod.namespace": default
+  endpointSelector: {}
   egress:
     - toPorts:
         - ports:
