--- a/kubernetes/apps/default/all-ports-policy.yaml
+++ b/kubernetes/apps/default/all-ports-policy.yaml
@@ -9,7 +9,7 @@ spec:
     ingress: false
   endpointSelector:
     matchLabels:
-      "k8s:io.kubernetes.pod.namespace": default
+      app.kubernetes.io/managed-by: Helm
   egress:
     - toPorts:
         - ports:
@@ -20,7 +20,7 @@ spec:
               - matchPattern: "*"
     - toEndpoints:
         - matchLabels:
-            "k8s:io.kubernetes.pod.namespace": default
+            app.kubernetes.io/managed-by: Helm
       toPorts:
         - ports:
             - port: "80"
